# Video-Editing-Website

./: db.sqlite3  pyproject.toml
TextToSpeech/: script.py
VideoConverter/: merge.py
mysite/: settings.py  urls.py  views.py
static/css/: style.css
templates/: base.html  index.html  page2.html  page3.html
