[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
pyttsx3 = "^2.90"
PyPDF2 = "^1.26.0"
pdfrw = "^0.4"
moviepy = "^1.0.3"
[tool.poetry.dev-dependencies]
